--- a/progetto01/public/styles/beuge.scss
+++ b/progetto01/public/styles/beuge.scss
@@ -96,8 +96,14 @@
     }
   }
 
-  @media only screen and (min-width: 700px){//tablet e desktop
+  @media only screen and (min-width: 700px){//tablet 
     .banner-evento{
       margin-top: -375px;
+    }
+  }
+
+  @media only screen and (min-width: 1200px){// desktop
+    .banner-evento{
+      margin-top: -580px;
     }
   }
